--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -15,7 +15,7 @@
 }
 
 .app__navbar-logo img {
-    width: 90px;
+    width: 120px;
 }
 
 .app__navbar-links {
@@ -99,6 +99,16 @@
     font-family: var(--font-base);
 }
 
+.app_navbar-smallscreen_links li:hover {
+    color: var(--color-white)
+}
+
+@media screen and (max-width: 2000px) {
+    .app__navbar-logo img {
+        width: 210px;
+    }
+}
+
 @media screen and (max-width: 1150px) {
     .app__navbar-links {
         display: none;
@@ -106,5 +116,19 @@
 
     .app__navbar-smallscreen {
         display: flex;
+    }
+}
+
+@media screen and (max-width: 650px) {
+    .app__navbar {
+        padding: 1rem;
+    }
+
+    .app__navbar-login {
+        display: none;
+    }
+
+    .app__navbar-logo img {
+        width: 110px;
     }
 }
