working on the about us

--- a/src/container/AboutUs/AboutUs.css
+++ b/src/container/AboutUs/AboutUs.css
@@ -72,12 +72,17 @@
     .app__aboutus-content_knife {
         margin: 4rem 0;
     }
+
+    .app__aboutus-overlay img {
+        width: 80%;
+        height: 500px;
+    }
 }
 
 @media screen and (max-width: 650px) {
     .app__aboutus-overlay img {
         width: 80%;
-        height: 350px;
+        height: 320px;
     }
 }
 
