working on specialMenu

--- a/src/container/Menu/SpecialMenu.css
+++ b/src/container/Menu/SpecialMenu.css
@@ -17,3 +17,10 @@
     align-items: center;
     flex-direction: row;
 }
+
+.app__specialMenu-menu_heading {
+    font-family: var(--font-base);
+    font-weight: 600;
+    font-size: 45;
+    line-height: 58.5;
+}
