--- a/src/container/Menu/SpecialMenu.css
+++ b/src/container/Menu/SpecialMenu.css
@@ -50,3 +50,18 @@
     margin: 2rem 0;
     width: 100%;
 }
+
+
+@media screen and (max-width: 2000px){
+
+}
+
+
+@media screen and (max-width: 2000px){
+
+}
+
+
+@media screen and (max-width: 2000px){
+    
+}
