--- a/src/container/Menu/SpecialMenu.css
+++ b/src/container/Menu/SpecialMenu.css
@@ -57,11 +57,13 @@
 }
 
 
-@media screen and (max-width: 2000px){
+@media screen and (max-width: 1150px){
 
 }
 
 
-@media screen and (max-width: 2000px){
-    
+@media screen and (max-width: 650px){
+    .app__specialMenu-menu_img {
+        width: 100%;
+    }
 }
