--- a/src/container/Chef/Chef.css
+++ b/src/container/Chef/Chef.css
@@ -32,9 +32,14 @@
     color: var(--color-golden);
 }
 
+.app__chef-sign p:nth-child(2){
+    margin-bottom: -4rem;
+}
+
 .app__chef-sign img {
-    width: 250px;
-    margin-top: 3rem;
+    width: 500px;
+    height: 230px;
+    margin: -6rem 0 -6rem -6rem;
 }
 
 @media screen and (max-width: 2000px) {
