--- a/src/container/Chef/Chef.css
+++ b/src/container/Chef/Chef.css
@@ -39,7 +39,7 @@
 .app__chef-sign img {
     width: 500px;
     height: 230px;
-    margin: -6rem 0 -6rem -6rem;
+    margin: -6rem 0 0 -6rem;
 }
 
 @media screen and (max-width: 2000px) {
