--- a/src/container/Laurels/Laurels.css
+++ b/src/container/Laurels/Laurels.css
@@ -20,3 +20,9 @@
     width: 50px;
     height: 50px;
 }
+
+.app__laurels_awards-card_content {
+    display: flex;
+    flex-direction: column;
+    margin-left: 1rem;
+}
