--- a/src/container/Gallery/Gallery.css
+++ b/src/container/Gallery/Gallery.css
@@ -59,3 +59,18 @@
     cursor: pointer;
 }
 
+.app__gallery-images_card img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 1;
+    transition: 0.5s ease;
+}
+
+.app__gallery-images_card:hover img {
+    opacity: 0.35;
+}
+
+.app__gallery-images_card:hover .gallery__image-icon {
+    opacity: 1;
+}
