--- a/src/container/Gallery/Gallery.css
+++ b/src/container/Gallery/Gallery.css
@@ -93,3 +93,36 @@
     background-color: var(--color-black);
     border-radius: 5px;
 }
+
+.gallery__arrow-icon:hover {
+    color: var(--color-white);
+}
+
+
+@media screen and (min-width: 2000px) {
+    .app__gallery-content {
+        min-width: 1000px;
+        padding-right: 4rem;
+    }
+
+    .app__gallery-images_card {
+        min-width: 400px;
+        height: 550px;
+    }
+
+}
+
+
+@media screen and (max-width: 1150px) {
+
+}
+
+
+@media screen and (min-width: 850px) {
+
+}
+
+
+@media screen and (min-width: 650px) {
+
+}
