working on the gallery

--- a/src/container/Gallery/Gallery.css
+++ b/src/container/Gallery/Gallery.css
@@ -114,7 +114,15 @@
 
 
 @media screen and (max-width: 1150px) {
+    .app__gallery {
+        flex-direction: column;
+    
+    }
 
+    .app__gallery-images {
+        max-width: 100%;
+        margin: 5rem 0;
+    }
 }
 
 
