--- a/src/container/Gallery/Gallery.css
+++ b/src/container/Gallery/Gallery.css
@@ -138,6 +138,10 @@
         padding: 4rem 0 4rem 2rem;
     }
 
+    .app__gallery-content {
+        min-width: 100%;
+    }
+
     .app__gallery-images_card {
         min-width: 240px;
         height: 320px;
