--- a/src/components/Footer/FooterOverlay.css
+++ b/src/components/Footer/FooterOverlay.css
@@ -7,3 +7,12 @@
     flex-direction: column;
     position: absolute;
 }
+
+.app__footerOverlay-black {
+    height: 25%;
+    background: var(--color-black);
+}
+
+.app__footerOverlay-img {
+    height: 75%;
+}
