--- a/src/components/Footer/Newsletter.css
+++ b/src/components/Footer/Newsletter.css
@@ -3,3 +3,12 @@
     border: 1px solid var(--color-golden);
     background: var(--color-black);
 }
+
+.app__newsLetter-heading {
+    text-align: center;
+}
+
+.app__newsLetter-input {
+    flex-direction: column;
+    margin-top: 3rem;
+}
