--- a/src/components/Footer/Newsletter.css
+++ b/src/components/Footer/Newsletter.css
@@ -19,4 +19,9 @@
     border-radius: 5px;
     font-size: 1rem;
     font-family: var(--font-base);
+    color: var(--color-white);
+
+    margin-right: 2rem;
+    padding: 0.75rem 1rem;
+    background: var(--color-black);
 }
