--- a/src/container/Footer/Footer.css
+++ b/src/container/Footer/Footer.css
@@ -68,3 +68,23 @@
 .footer__copyright {
    margin-top: 3rem; 
 }
+
+
+@media screen and (min-width: 2000px) {
+    
+}
+
+
+@media screen and (min-width: 2000px) {
+    
+}
+
+
+@media screen and (min-width: 2000px) {
+    
+}
+
+
+@media screen and (min-width: 2000px) {
+    
+}
